--- a/packages/module-b/package.json
+++ b/packages/module-b/package.json
@@ -25,5 +25,6 @@
   },
   "bugs": {
     "url": "https://github.com/missingtears/testa/issues"
-  }
+  },
+  "gitHead": "5ee8ff7e75fcd6b2d0ff100104a9fb438b7fa3e2"
 }
