--- a/packages/feng/package.json
+++ b/packages/feng/package.json
@@ -25,5 +25,6 @@
   },
   "bugs": {
     "url": "https://github.com/missingtears/testa/issues"
-  }
+  },
+  "gitHead": "1ffbceeb7778879174fa72fef71fa2722c35c7c0"
 }
